<resources>
    <string name="app_name">BamBeachFit</string>
    <string name="action_settings">Settings</string>
    <string name="average_pace">%1$2d:%2$02d</string>
    <string name="content_description">Content Description</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="end_workout">End Workout</string>
    <string name="label_average_pace">Average Pace</string>
    <string name="label_total_distance">Total Distance</string>
    <string name="label_total_workout_time">Total Workout Time</string>
    <string name="pause_workout">Pause Workout</string>
    <string name="resume_workout">Resume Workout</string>
    <string name="start_workout">Start A Run</string>
    <string name="title_activity_workout_tracking">WorkoutTrackingActivity</string>
    <string name="title_activity_workout_details">WorkoutDetailsActivity</string>
    <string name="workout_time_without_hours">%1$2d:%2$02d</string>
    <string name="workout_time_with_hours">%1$2d:%2$02d:%3$02d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
